# yolo_sheep_follower

./: .gitignore  .gitmodules  CITATION.cff  README.md  nav2_sheep_follower.py  sheep_follower.py
sheep_follower/: package.xml  setup.cfg  setup.py
sheep_follower/config/: direct_sheep_follower.yaml  nav2_sheep_follower.yaml  sheep_follower.rviz
sheep_follower/launch/: direct_sheep_follower.launch.py  nav2_sheep_follower.launch.py  sheep_follower_simulation.launch.py
sheep_follower/resource/: sheep_follower
sheep_follower/sheep_follower/: __init__.py  direct_sheep_follower.py  nav2_sheep_follower.py  wolf_distance_detector.py
sheep_follower/test/: test_copyright.py  test_flake8.py
