<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sheep_follower</name>
  <version>1.0.0</version>
  <description>ROS2 package for autonomous sheep following using YOLO detection</description>
  <maintainer email="lpril@unileon.es">Luis Prieto López</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/luispri2001/yolo_sheep_follower</url>
  <url type="repository">https://github.com/luispri2001/yolo_sheep_follower.git</url>
  <url type="bugtracker">https://github.com/luispri2001/yolo_sheep_follower/issues</url>

  <author email="lpril@unileon.es">Luis Prieto López</author>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>yolo_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <!-- Launch dependencies for simulation -->
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>yolo_bringup</exec_depend>
  <exec_depend>nav2_gps_waypoint_follower_demo</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
